Update Presentation Draft Outline

--- a/Presentation/Presentation_Draft_Outline.ipynb
+++ b/Presentation/Presentation_Draft_Outline.ipynb
@@ -22,22 +22,59 @@
     "# Presentation Draft Outline\n",
     "\n",
     "## Ideally 7-7.5 minutes total\n",
+    "<br>\n",
     "\n",
-    "* Tools Used - **30 seconds**\n",
-    "    * 1 slide\n",
-    "* Clustering - **3 min total**\n",
-    "    * Alex’s clustering based on neighborhoods - **1 min**\n",
-    "        * criteria used\n",
-    "        * results on map\n",
-    "    * Jesse’s clustering based on skyscrapers - **1 min**\n",
-    "        * criteria used\n",
-    "        * Overlap with Alex’s clusters\n",
-    "        * PCA results, Neural Networks\n",
-    "    * Harpreet’s clustering based on restaurants - **1 min**\n",
-    "        * criteria used\n",
-    "        * overlap with Alex and Jesse’s clusters\n",
+    "# JESSE - BUSINESS CASE - **30 seconds**\n",
+    "## Business Case Slide \n",
+    "* We come into this project in the role of a consultative group for a Pan Pacific Platinum Prestige Partnership Properties that is looking to develop a footing and expand its market within New York City. \n",
+    "* The goal is to identify flagship properties within the 5 boroughs that are both competitive in pricing and potent in long-term value accumulation. \n",
+    "\n",
+    "# ALEX - TOOLS USED - **30 seconds**\n",
+    "## Tools Used Slide\n",
+    "We use a wide selection of the best-in-industry tools to evaluate the city's real estate market segmentations, and we're confident our combination of in-depth data exploration and analysis provides us with the best results to offer to you.\n",
+    "<br>\n",
+    "* Data Exploration: NYC Planning, Google Places API, Pluto Data, NYC Open Data, Yelp\n",
+    "* Data Analysis: Plotly, SKLearn, GeoPandas, Matplotlib\n",
+    "\n",
+    "# ALEX - CLUSTERING - **1.5 min**\n",
+    "## PCA Slide & NYC Map Slide\n",
+    "* To start our exploration into New York City neighborhoods, we began by looking at the city amenities and infrastructure offered in each neighborhood.  \n",
+    "* Gathering this data, and then performing Dimensionality Reduction with Principal Component Analysis and then Clustering using KMeans Algorithm, we were able to notice 4 distinct clusters of neighborhoods.\n",
+    "* Utilizing Geospatial Proccessing, we can visualize these clusters actually on a map of the city, and notice some interesting relationships.\n",
+    "* This small cluster in Orange encasing most of Manhattan, as well as the other smaller cluster in Red including some \n",
+    "## Radar Chart Slide\n",
+    "\n",
+    "\n",
+    "# HARPREET - CLUSTERING - **1.5 min**\n",
+    "\n",
+    "# JESSE - CLUSTERING - **1.5 min**\n",
+    "## Three Clusters of Towers Slide\n",
+    "* Pluto dataset, from the NYC department of planning, consists of 800000 buildings and 90 features.\n",
+    "* In order to suit the particular interests of our client, a large real estate investment firm looking for a flagship product as they initiate their interest in the New York city real estate market, I have limited my inquiry to qualifying buildings within the 5 boroughs, with a minimal height of 210 feet, around 15 floors. \n",
+    "* The three graphs, colored by their respective clustering, show the three main characteristics of these buildings: age, zoning and a combination of these two above factors with each building’s various assessed values. \n",
+    "* We can see that the two concentration of  buildings, within the DUMBO neighborhood of Brooklyn and Hunter’s point neighborhood of Queens, have the distinct advantages of belonging to the newest age group, being residential buildings and therefore consistent in terms of valuation growth and demand, and finally competitive in  their purchasing cost in comparison to their counterparts on the main island of Manhattan. \n",
+    "\n",
+    "## PCA and others Slide\n",
+    "* These clustering have been cross validated with other techniques, such as Principal Component analysis and various supervised classification models, to prove their validity.\n",
+    "\n",
+    "# JESSE - TOWERS - **30 seconds**\n",
+    "## Focal point properties Slide\n",
+    "* Now I will present two specific properties within the neighborhood Alex has identified to exemplify what we, as a consultation voice, would advise our investors to look into\n",
+    "The first building on the left, 230 Ashland Place, located at the heart of Brooklyn in close proximity to the central hub of Barclay transport junction, is built in 2006. \n",
+    "* It has 28 floors, with a total unit count of 109. It’s assessed total value, under the Department of Taxation and Financing,  is 11 million. With a median closing price per square foot of 1100 dollars, it is comparably undervalued to its Manhattan counterpart.\n",
+    "* The second building on the right, Tower 28, is a newer example. Built in 2015, within the framework of Queens West project, the building has 58 floors with a total unit count of 478. Its current assessed value is 44 million dollars. \n",
+    "\n",
+    "\n",
+    "## Processes\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "* Harpreet’s clustering based on restaurants - **1 min**\n",
+    "* criteria used\n",
+    "* overlap with Alex and Jesse’s clusters\n",
     "* Application of Data (the story) - **2 min total**\n",
-    "    * Compare Towers"
+    "* Compare Towers"
    ],
    "cell_type": "markdown",
    "metadata": {}
