--- a/Presentation/Presentation_Draft_Outline.ipynb
+++ b/Presentation/Presentation_Draft_Outline.ipynb
@@ -35,14 +35,24 @@
     "<br>\n",
     "* Data Exploration: NYC Planning, Google Places API, Pluto Data, NYC Open Data, Yelp\n",
     "* Data Analysis: Plotly, SKLearn, GeoPandas, Matplotlib\n",
+    "* Presentation: Canva, Unsplash\n",
     "\n",
     "# ALEX - CLUSTERING - **1.5 min**\n",
-    "## PCA Slide & NYC Map Slide\n",
-    "* To start our exploration into New York City neighborhoods, we began by looking at the city amenities and infrastructure offered in each neighborhood.  \n",
-    "* Gathering this data, and then performing Dimensionality Reduction with Principal Component Analysis and then Clustering using KMeans Algorithm, we were able to notice 4 distinct clusters of neighborhoods.\n",
-    "* Utilizing Geospatial Proccessing, we can visualize these clusters actually on a map of the city, and notice some interesting relationships.\n",
-    "* This small cluster in Orange encasing most of Manhattan, as well as the other smaller cluster in Red including some \n",
-    "## Radar Chart Slide\n",
+    "## NYC Map Slide\n",
+    "* To start our exploration into New York City neighborhoods, we began by looking at the city services and infrastructure offered in each neighborhood.  \n",
+    "* After gathering and preparing this data, by performing Dimensionality Reduction with Principal Component Analysis and then Clustering using KMeans Algorithm, we are able to notice 4 distinct clusters of neighborhoods.\n",
+    "* Utilizing Geospatial Proccessing, we can visualize these clusters on a map of the city, and notice some interesting relationships.\n",
+    "* The two smallest clusters, both with just 11 neighborhoods in each, out of our 195 total, represent most of Manhattan in Orange, and an array of neighborhoods throughout Queens and Brooklyn in Red\n",
+    "* Given that property in Manhattan is the most expensive in New York City, we will demonstrate here that the neighborhoods in Queens and Brooklyn represent an opportunity for real estate investment with a smaller ask but still all the desirable aspects of Manhattan property\n",
+    "\n",
+    "## City Amenities and Infrastructure\n",
+    "* When we view our original data, now showing the average number of services per neighborhood grouped by these clusters we've identified, the Orange of the Manhattan cluster clearly has a lot to offer residents,\n",
+    "* However you can also see that the Brooklyn and Queens cluster in Red in every instance exceeds the offerings outside of Manhattan, and in many cases even exceeds those within Manhattan as well\n",
+    "\n",
+    "## Education & Environment Slides\n",
+    "* Education and Lifestyle are incredibly important to clients making real estate decisions, and here you can see the average SAT scores are incredibly competitve between these neighborhoods\n",
+    "    * additionally of note is that our Brooklyn and Queens Cluster offers the lowest average student enrollment, leading to smaller ratios between students and teachers\n",
+    "* And as we all know every successful person loves dogs and nature, and you can see that these neighborhoods are flourishing in that arena as well\n",
     "\n",
     "\n",
     "# HARPREET - CLUSTERING - **1.5 min**\n",
